deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deplyoment
  labels:
    env: production
spec:
  template:
    metadata:
      name: my-Pod
      labels:
        env: production
    spec:
      containers:
        - name: my-container
          image: nginx
  replicas: 5
  selector:
    matchLabels:
      env: production
