pods.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: mypod
  labels:
    app: nginx
    tier: frontend
spec:
  containers:
    - name: nginx
      image: nginx
