readinessprob.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: nginx
      image: nginx
      readinessProbe:
        httpget:
          path: /api/ready
          port: 8080
      ---------------------
      readinessProbe:
        tcpSocket:
          port: 3306
      ---------------------
      readinessProbe:
        exec:
          command:
            - cat
            - /api/is_ready
      ---------------------
      readinessProbe:
        httpget:
          - path: /api/ready
            port: 8080
            initialdelayseconds: 10
            periodseconds: 5
            failureThreshold: 3
